--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -2,12 +2,13 @@ name: charm
 version: 2.2
 summary: charm and charm-tools
 description: charmstore-client and charm-tools
-confinement: strict
+confinement: classic
+grade: stable
 
 apps:
   charm:
-    command: env PREFIX=$SNAP GIT_EXEC_PATH=$SNAP/usr/lib/git-core LC_ALL=C.UTF-8 $SNAP/bin/charm
-    plugs: [network, network-bind, home]
+    command: env UNIXCONFDIR=$SNAP/etc PREFIX=$SNAP GIT_EXEC_PATH=$SNAP/usr/lib/git-core LC_ALL=C.UTF-8 $SNAP/bin/charm
+#   plugs: [network, network-bind, home]
 parts:
   charm:
     plugin: godeps
@@ -27,7 +28,8 @@ parts:
     plugin: python
     source: https://github.com/juju/charm-tools.git
     python-version: python2
-    source-branch: "2.1"
+    # source-branch: "2.1"
+    source-tag: v2.2.0
     build-packages:
       - build-essential
     python-packages:
@@ -37,18 +39,13 @@ parts:
       - bzr
       - mercurial
       - python-apt
-    stage:
-      - -bin/virtualenv
+      - dpkg
+      - python3-venv
   charm-version:
     plugin: dump
     source: workarounds
     stage:
       - charmstore-client-version
-  virtualenv:
-    plugin: python
-    python-version: python3
-    python-packages:
-      - virtualenv
   git:
     plugin: nil
     stage-packages:
