--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -13,7 +13,7 @@ apps:
 parts:
   charm:
     source: https://github.com/juju/charmstore-client.git
-    source-tag: 2.2.1
+    source-tag: 2.2.2
     source-type: git
     plugin: godeps
     go-importpath: github.com/juju/charmstore-client
@@ -71,6 +71,8 @@ parts:
       - libexpat1-dev
     stage-packages:
       - libcurl3
+    after:
+      - charm
   charm-version:
     source: workarounds
     plugin: dump
